manifests/staging/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "configmanagementapi"
  namespace: "supplychainvisibility"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "configmanagementapi"
  template:
    metadata:
      labels:
        app: "configmanagementapi"
    spec:
      containers:
        - name: "configmanagementapi"
          image: "us-east1-docker.pkg.dev/settyl-gcp-infra/supplychainvisibilitygcrstaging/configmanagementapi:latest"
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          readinessProbe:
            httpGet:
              path: "/health"
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: "/health"
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 20
