manifests/staging/service.yml
apiVersion: v1
kind: Service
metadata:
  name: "configmanagementapi"
  namespace: supplychainvisibility
  labels:
    app: "configmanagementapi"
spec:
  type: LoadBalancer
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
      name: http
  selector:
    app: "configmanagementapi"
