manifests/staging/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: supplychainvisibility-ingress
  namespace: supplychainvisibility
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - gke.staging.golive.settyl.com
      secretName: supplychainvisibility-tls
  rules:
    - host: gke.staging.golive.settyl.com
      http:
        paths:
          - path: /api/healthcheck
            pathType: Prefix
            backend:
              service:
                name: configmanagementapi
                port:
                  number: 8000
